[package]
name = "nostress"
version = "0.1.4"
edition = "2021"
description = "Nostr to RSS"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive", "env"]}
nostr-sdk = "0.29.0"
rss = "2.0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"]}
tracing = "0.1.40"

tower-http = { version = "0.5.2", features = ["tracing", "trace"] }
service_conventions = "0.0.12"
